--- a/Omniplayer/MiniPlayer.xaml
+++ b/Omniplayer/MiniPlayer.xaml
@@ -6,8 +6,11 @@
         xmlns:local="clr-namespace:Omniplayer"
         mc:Ignorable="d"
         Title="MiniPlayer" Height="350" Width="525">
-    <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="185,137,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+    <Grid Loaded="Grid_Loaded">
+        <Button x:Name="button" Content="Play" HorizontalAlignment="Left" Margin="74,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Button x:Name="button_Copy" Content="Pause" HorizontalAlignment="Left" Margin="166,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy_Click"/>
+        <Button x:Name="button_Copy1" Content="Skip" HorizontalAlignment="Left" Margin="262,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy1_Click"/>
+        <Button x:Name="button_Copy2" Content="Previous" HorizontalAlignment="Left" Margin="357,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy2_Click"/>
 
     </Grid>
 </Window>
