--- a/Omniplayer/MiniPlayer.xaml
+++ b/Omniplayer/MiniPlayer.xaml
@@ -5,12 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Omniplayer"
         mc:Ignorable="d"
-        Title="MiniPlayer" Height="350" Width="525">
+        Title="MiniPlayer" SizeToContent="WidthAndHeight" Height="1080" Width="1920">
     <Grid Loaded="Grid_Loaded">
-        <Button x:Name="button" Content="Play" HorizontalAlignment="Left" Margin="74,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <Button x:Name="button_Copy" Content="Pause" HorizontalAlignment="Left" Margin="166,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy_Click"/>
-        <Button x:Name="button_Copy1" Content="Skip" HorizontalAlignment="Left" Margin="262,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy1_Click"/>
-        <Button x:Name="button_Copy2" Content="Previous" HorizontalAlignment="Left" Margin="357,138,0,0" VerticalAlignment="Top" Width="75" Click="button_Copy2_Click"/>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="LeftTimeCode" HorizontalAlignment="Left" Margin="10, 0, 0, 0" TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Bottom"   Grid.Column="0" FontSize="14" />
+                <Slider x:Name="Transport" Margin="5, 10, 5, 0" VerticalAlignment="Center" Grid.Column="1" Height="18"/>
+                <TextBlock x:Name="RightTimeCode" HorizontalAlignment="Right" TextWrapping="Wrap" Text="-00:00:00" VerticalAlignment="Center" Grid.Column="2" FontSize="14"/>
+            </Grid>
+            <StackPanel Orientation="Horizontal">
+                <Button x:Name="PrevButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,5,0">
+                    <Image Width="36" Source="./Resources/Icons/Controls/prev.png"/>
+                </Button>
+                <Button x:Name="PlayButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,5,0">
+                    <Image Width="36" Source="./Resources/Icons/Controls/play.png"/>
+                </Button>
+                <Button x:Name="NextButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,5,0">
+                    <Image Width="36" Source="./Resources/Icons/Controls/next.png"/>
+                </Button>
+                <Slider x:Name="Volume" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,5,0" Width="108" Value="7"/>
+                <TextBlock x:Name="NowplayingText" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,5,0"
+                           TextWrapping="Wrap" Text="Now Playing: Artist - Song" FontSize="18" />
+            </StackPanel>
+        </StackPanel>
+        
     </Grid>
 </Window>
