--- a/Omniplayer/MiniPlayer.xaml
+++ b/Omniplayer/MiniPlayer.xaml
@@ -6,10 +6,11 @@
         xmlns:local="clr-namespace:Omniplayer"
         mc:Ignorable="d"
         Title="MiniPlayer" SizeToContent="WidthAndHeight" Height="1080" Width="1920">
-    
-    <Grid Loaded="Grid_Loaded">
+
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -17,7 +18,7 @@
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Menu Grid.ColumnSpan="2">
+        <Menu Grid.Row="0" Grid.ColumnSpan="3">
             <MenuItem Header="_File">
                 <MenuItem Header="Imp_ort" InputGestureText="Ctrl+O" />
             </MenuItem>
@@ -34,38 +35,60 @@
                 </MenuItem>
             </MenuItem>
         </Menu>
-        <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Margin="10">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock x:Name="LeftTimeCode"  TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Center"   Grid.Column="0" FontSize="14" />
-                <Slider x:Name="Transport" Margin="10, 0" VerticalAlignment="Center" Grid.Column="1" AutoToolTipPlacement="BottomRight"/>
-                <TextBlock x:Name="RightTimeCode" TextWrapping="Wrap" Text="-00:00:00" VerticalAlignment="Center" Grid.Column="2" FontSize="14"/>
-            </Grid>
-            <StackPanel Orientation="Horizontal" Margin="0, 10, 0, 0">
-                <Button x:Name="PrevButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
-                    <Image Width="36" Source="./Resources/Icons/Controls/prev.png" ToolTip="Skip Backwards"/>
-                </Button>
-                <Button x:Name="PlayButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
-                    <Image Width="36" Source="./Resources/Icons/Controls/play.png" ToolTip="Play"/>
-                </Button>
-                <Button x:Name="NextButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
-                    <Image Width="36" Source="./Resources/Icons/Controls/next.png" ToolTip="Skip Forwards"/>
-                </Button>
-                <Button x:Name="LoopModeButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
-                    <Image Width="36" Source="./Resources/Icons/Controls/repeat.png" ToolTip="Repeat"/>
-                </Button>
-                <Button x:Name="ShuffleButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
-                    <Image Width="36" Source="./Resources/Icons/Controls/shuffle.png" ToolTip="Shuffle"/>
-                </Button>
-                <Slider x:Name="Volume" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" Width="108" Value="7" ToolTip="Volume"/>
-                <TextBlock x:Name="NowplayingText" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0"
+        <GridSplitter Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch"/>
+        <Border Grid.Row="2" Grid.ColumnSpan="3">
+            <Border.Background>
+                <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
+            </Border.Background>
+            <StackPanel Margin="10">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="LeftTimeCode"  TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Center"   Grid.Column="0" FontSize="14" />
+                    <Slider x:Name="Transport" Margin="10, 0" VerticalAlignment="Center" Grid.Column="1" AutoToolTipPlacement="BottomRight"/>
+                    <TextBlock x:Name="RightTimeCode" TextWrapping="Wrap" Text="-00:00:00" VerticalAlignment="Center" Grid.Column="2" FontSize="14"/>
+                </Grid>
+                <StackPanel Orientation="Horizontal" Margin="0, 10, 0, 0">
+                    <Button x:Name="PrevButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" Click="PrevButton_Click">
+                        <Image Width="36" Source="./Resources/Icons/Controls/prev.png" ToolTip="Skip Backwards"/>
+                    </Button>
+                    <Button x:Name="PlayPauseButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" Click="PlayPauseButton_Click">
+                        <Image x:Name="PlayButtonImage" Width="36" Source="./Resources/Icons/Controls/play.png" ToolTip="Play"/>
+                    </Button>
+                    <Button x:Name="NextButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" Click="NextButton_Click">
+                        <Image Width="36" Source="./Resources/Icons/Controls/next.png" ToolTip="Skip Forwards"/>
+                    </Button>
+                    <Button x:Name="LoopModeButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
+                        <Image Width="36" Source="./Resources/Icons/Controls/repeat.png" ToolTip="Repeat"/>
+                    </Button>
+                    <Button x:Name="ShuffleButton" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0">
+                        <Image Width="36" Source="./Resources/Icons/Controls/shuffle.png" ToolTip="Shuffle"/>
+                    </Button>
+                    <Slider x:Name="Volume" HorizontalAlignment="Center" VerticalAlignment="Center" Width="108" Value="7" ToolTip="Volume" Cursor="Hand" Maximum="11" SmallChange="0" TickPlacement="TopLeft" ValueChanged="Volume_ValueChanged">
+                        <Slider.Foreground>
+                            <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.AppWorkspaceColorKey}}"/>
+                        </Slider.Foreground>
+                    </Slider>
+                    <TextBlock x:Name="VolumeText" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           TextWrapping="Wrap" Text="{Binding ElementName=Volume, Path=Value, UpdateSourceTrigger=PropertyChanged, StringFormat='00'}" FontSize="18" ToolTip="Volume" MouseUp="VolumeText_MouseUp" >
+                        <TextBlock.Foreground>
+                            <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
+                        </TextBlock.Foreground>
+                    </TextBlock>
+                    <TextBlock x:Name="Separator" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                           TextWrapping="Wrap" Text=" | " FontSize="18" ToolTip="Now Playing" >
+                        <TextBlock.Foreground>
+                            <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
+                        </TextBlock.Foreground>
+                    </TextBlock>
+                    <TextBlock x:Name="NowplayingText" HorizontalAlignment="Center" VerticalAlignment="Center" 
                            TextWrapping="Wrap" Text="Now Playing: Artist - Song" FontSize="18" ToolTip="Now Playing" />
+                </StackPanel>
             </StackPanel>
-        </StackPanel>
-
+        </Border>
+        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="-81,36,0,0" Grid.Row="2" VerticalAlignment="Top"/>
     </Grid>
 </Window>
