--- a/Omniplayer/MiniPlayer.xaml
+++ b/Omniplayer/MiniPlayer.xaml
@@ -4,9 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Omniplayer"
+        xmlns:l="clr-namespace:Omniplayer"
         mc:Ignorable="d"
-        Title="MiniPlayer" SizeToContent="WidthAndHeight" Height="1080" Width="1920">
-
+        Title="MiniPlayer" SizeToContent="WidthAndHeight" Height="1080" Width="1920" Loaded="Window_Loaded">
+    <Window.Resources>
+        <l:DurationSecondsToFormattedConverter x:Key="DurationSecondsToFormattedConverter" />
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -36,6 +39,28 @@
             </MenuItem>
         </Menu>
         <GridSplitter Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch"/>
+        <Grid Grid.Column="2" Grid.Row="1">
+            <DataGrid Name="PlaylistViewer" AutoGenerateColumns="False" LoadingRow="PlaylistViewer_LoadingRow" CanUserResizeRows="False" CanUserSortColumns="False">
+                <DataGrid.BorderBrush>
+                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlDarkColorKey}}"/>
+                </DataGrid.BorderBrush>
+                <DataGrid.VerticalGridLinesBrush>
+                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlDarkColorKey}}"/>
+                </DataGrid.VerticalGridLinesBrush>
+                <DataGrid.HorizontalGridLinesBrush>
+                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlDarkColorKey}}"/>
+                </DataGrid.HorizontalGridLinesBrush>
+                <DataGrid.Foreground>
+                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlTextColorKey}}"/>
+                </DataGrid.Foreground>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Title" Binding="{Binding Title}" MinWidth="200"/>
+                    <DataGridTextColumn Header="Album" Binding="{Binding Album}" MinWidth="200"/>
+                    <DataGridTextColumn Header="Artist" Binding="{Binding Artist}" MinWidth="200"/>
+                    <DataGridTextColumn Header="Duration" Binding="{Binding Duration, Converter={StaticResource DurationSecondsToFormattedConverter}}" IsReadOnly="True"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
         <Border Grid.Row="2" Grid.ColumnSpan="3">
             <Border.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
