--- a/Omniplayer/MiniPlayer.xaml
+++ b/Omniplayer/MiniPlayer.xaml
@@ -12,9 +12,9 @@
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="5"/>
-            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -39,7 +39,13 @@
             </MenuItem>
         </Menu>
         <GridSplitter Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch"/>
-        <Grid Grid.Column="2" Grid.Row="1">
+        <StackPanel Grid.Column="2" Grid.Row="1" Orientation="Vertical">
+            <DockPanel Margin="5" LastChildFill="False">
+                <TextBlock DockPanel.Dock="Left" Name="PlaylistName" Text="Queue" FontSize="20"/>
+                <Button DockPanel.Dock="Right" Name="PlayListAddButton" Width="104" Click="PlayListAddButton_Click">
+                    <TextBlock Text="Add to Playlist"/>
+                </Button>
+            </DockPanel>
             <DataGrid x:Name="PlaylistViewer" AutoGenerateColumns="False" LoadingRow="PlaylistViewer_LoadingRow" CanUserResizeRows="False" 
                       CanUserSortColumns="False" IsReadOnly="True" SelectionUnit="FullRow">
                 <DataGrid.Resources>
@@ -66,7 +72,7 @@
                     <DataGridTextColumn Header="Duration" Binding="{Binding Duration, Converter={StaticResource DurationSecondsToFormattedConverter}}" IsReadOnly="True"/>
                 </DataGrid.Columns>
             </DataGrid>
-        </Grid>
+        </StackPanel>
         <Border Grid.Row="2" Grid.ColumnSpan="3">
             <Border.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
@@ -79,7 +85,16 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock x:Name="LeftTimeCode"  TextWrapping="Wrap" Text="00:00:00" VerticalAlignment="Center"   Grid.Column="0" FontSize="14" />
-                    <Slider x:Name="Transport" Margin="10, 0" VerticalAlignment="Center" Grid.Column="1" AutoToolTipPlacement="BottomRight"/>
+                    <Slider x:Name="Transport" Margin="10, 0" VerticalAlignment="Center" Grid.Column="1" Background="{x:Null}" TickFrequency="15">
+                        <Slider.Foreground>
+                            <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
+                        </Slider.Foreground>
+                        <Slider.ToolTip>
+                            <ToolTip Content="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.Value, Converter={StaticResource DurationSecondsToFormattedConverter}}" />
+                        </Slider.ToolTip>
+
+                    </Slider>
+
                     <TextBlock x:Name="RightTimeCode" TextWrapping="Wrap" Text="-00:00:00" VerticalAlignment="Center" Grid.Column="2" FontSize="14"/>
                 </Grid>
                 <StackPanel Orientation="Horizontal" Margin="0, 10, 0, 0">
